	- Added CLIENT_LONG_FLAG to be able to get more column flags 
	  (isAutoIncrement() being the most important)
	- Because of above, implemented ResultSetMetaData.isAutoIncrement()
	  to use Field.isAutoIncrement().
	- Honor 'lower_case_table_names' when enabled in the server when
	  doing table name comparisons in DatabaseMetaData methods.
	  
11-08-02 - Version 3.0.2-dev

	- Fixed issue with updatable result sets and PreparedStatements not 
	  working
	- Fixed ResultSet.setFetchDirection(FETCH_UNKNOWN)
	- Fixed issue when calling Statement.setFetchSize() when using 
	  arbitrary values
	- Fixed incorrect conversion in ResultSet.getLong()
	- Implemented ResultSet.updateBlob().
    - Removed duplicate code from UpdatableResultSet (it can be inherited 
      from ResultSet, the extra code for each method to handle updatability
      I thought might someday be necessary has not been needed).
    - Fixed "UnsupportedEncodingException" thrown when "forcing" a 
      character encoding via properties.
    - Fixed various non-ASCII character encoding issues.
    - Added driver property 'useHostsInPrivileges'. Defaults to true. 
      Affects whether or not '@hostname' will be used in 
      DBMD.getColumn/TablePrivileges.
    - All DBMD result set columns describing schemas now return NULL
      to be more compliant with the behavior of other JDBC drivers
      for other databases (MySQL does not support schemas).
    - Added SSL support. See README for information on how to use it.
    - Properly restore connection properties when autoReconnecting
      or failing-over, including autoCommit state, and isolation level.
    - Use 'SHOW CREATE TABLE' when possible for determining foreign key
      information for DatabaseMetaData...also allows cascade options for
      DELETE information to be returned
    - Escape 0x5c character in strings for the SJIS charset.
    - Fixed start position off-by-1 error in Clob.getSubString()
    - Implemented Clob.truncate()